kubernetes-ingressconfig/ingress.yaml
apiVersion: networking.k8s.io/v1
   
kind: Ingress 
metadata:
  name: minimal-ingress
spec:
  rules:
    - host: kubernetes.docker.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 3001
